# UWr-II

./: .gitignore  README.md
2018-2019/Lato/AiSD/: pracA.cpp
2019-2020/Lato/BD/: clean.sql
2019-2020/Lato/Ex 1/: Ex 1.sln
2019-2020/Lato/SyK/: List 1.md  List 2.md  List 3.md  List 5.md  List 6.md  List 7.md  List 8.md
2019-2020/Zima/Rust/List 12 (Project)/: Cargo.toml  foodterest.db
2019-2020/Zima/Rust/List 12 (Project)/migrations/2020-01-22-151750_create_pins/: down.sql  up.sql
2019-2020/Zima/Rust/List 12 (Project)/src/: db.rs  main.rs  schema.rs
2019-2020/Zima/Rust/List 12 (Project)/src/handlers/: landing.rs  mod.rs  pins.rs
2019-2020/Zima/Rust/List 12 (Project)/src/models/: pin.rs
2019-2020/Zima/Rust/List 12 (Project)/templates/: index.html  new-post.html  pin.html
2019-2020/Zima/WEPPO/: package-lock.json  package.json
Term I/WdP/wprawka/: wprawka.txt
Term I/WdP/wprawka3/: bisekcja.py  wprawka3.txt
Term I/WdP/wprawka4/: wprawka.py  wprawka4.txt
Term I/WdP/wprawka5/: reszta.py  wprawka5.txt
Term I/WdP/wprawka6/: wprawka6.txt
Term I/WdP/wprawka7/: forms.py
Term II/C++/Lista 1/: prime_factors.cpp
Term II/C++/Lista 2/: Prosta.cpp  Prosta.h  Punkt.cpp  Punkt.h  Wektor.cpp  Wektor.h  main.cpp
Term II/C++/Lista 3/: Stack.cpp  Stack.h  main.cpp
Term II/C++/Lista 4/: Source.cpp  tabbit.cpp  tabbit.h
Term II/C++/Lista 5/: DateHour.cpp  DateHour.h
Term II/PO/List 07/: test.txt  (+1 more)
Term IV/AiSD/: misc.py  pracB.cpp  selectionHoare.py
Term V/WEPPO/: package-lock.json  package.json
Term VI/BD/: baza.dmp
Term VI/SyK/: List 4.md  List 9.md
(+859 files in other folders)
