[package]
name = "foodterest"
version = "0.1.0"
authors = ["Naylepsh <naylepsh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.10"
uuid = { version = "0.5", features = ["serde", "v4"] }